test/CheckError/SizeOf/AlignOfUnsizedTemplateType.loci
// RUN: %locic %s --verify > %t
// RUN: FileCheck < %t %s

template <typename T>
size_t getTypeAlign() {
	// CHECK: .loci:7:9: error: cannot find static method '__alignmask' for type 'T'
	return alignof(T);
}

// CHECK: 4 errors generated.
